# const_gen_proc_macro

./: Cargo.toml  README.md
lib/: Cargo.toml
lib/src/: expression.rs  lib.rs  object.rs  object_type.rs  parameter.rs  path.rs  return.rs
proc_macro_tests/: Cargo.toml
proc_macro_tests/src/: lib.rs
proc_macro_tests/tests/: test_proc_macro.rs  test_test.rs
