[package]
name = "const_gen_proc_macro"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Create proc macro that adds compile time functionality for the creation of constants"
repository = "https://github.com/redmcg/const_gen_proc_macro"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
proc_macro_expand = []

[dependencies]
proc-macro2 = "1.0.59"
quote = "1.0.28"
syn = { version = "2.0.18", features = ["full"] }
