[package]
name = "proc_macro_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
proc_macro_expand = []

[dependencies]
const_gen_proc_macro = { path = "../lib" }

[lib]
proc-macro = true

[dev-dependencies]
macro_const = "0.1.0"
